--- a/app/src/content/upload/upload_template.view.html
+++ b/app/src/content/upload/upload_template.view.html
@@ -13,7 +13,7 @@
         <md-dialog-content class="md-padding">
 
             <md-radio-group ng-model="template_type" required>
-                <md-radio-button value="erklaering"> {{'COMMON.ERKLAERING' | translate}}</md-radio-button>
+                <md-radio-button value="kendelse"> {{'COMMON.KENDELSE' | translate}}</md-radio-button>
                 <md-radio-button value="samtykke"> {{'COMMON.SAMTYKKE' | translate}}</md-radio-button>
             </md-radio-group>
 
