--- a/app/src/content/action/move.view.html
+++ b/app/src/content/action/move.view.html
@@ -1,5 +1,5 @@
 <md-dialog aria-label="Slet fil">
-    <form name="deleteFileForm" ng-submit="delete()">
+    <form name="deleteFileForm" ng-submit="move()">
 
         <md-toolbar>
             <div class="md-toolbar-tools">
