--- a/app/src/content/contentList/contentTemplate.html
+++ b/app/src/content/contentList/contentTemplate.html
@@ -9,6 +9,6 @@
   </td>
   <td>{{content.lastChanged | customDate}} - {{content.lastChangedBy}}</td>
   <td style="text-align:right" ng-click="$event.stopPropagation()">
-    <content-action content="content"></content-action>
+    <content-action content="content" folder-list="folderList"></content-action>
   </td>
 </tr>
