--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -9,6 +9,10 @@
                 <div>
                     <h2 class="od-user-name">{{ vm.getUserName() }}</h2>
 
+                    <md-button class="md-icon-button" title="FlowChart" ui-sref="flowchart">
+                        <md-icon>insert_drive_file</md-icon>
+                    </md-button>
+
                     <md-button class="md-icon-button" title="Dokumenter" ui-sref="shared-documents">
                         <md-icon>insert_drive_file</md-icon>
                         <md-tooltip md-delay="500" md-direction="bottom">Dokumenter</md-tooltip>
@@ -25,6 +29,7 @@
                 </div>
             </div>
         </span>
+
         <span class="md-toolbar-tools" layout="row">
             <a ui-sref="declaration.show({caseid: vm.caseId})" style="color:white">
                 <h2>{{vm.title}}</h2>
