updated icon for flowchart

--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -10,7 +10,7 @@
                     <h2 class="od-user-name">{{ vm.getUserName() }}</h2>
 
                     <md-button class="md-icon-button" title="FlowChart" ui-sref="flowchart">
-                        <md-icon>insert_drive_file</md-icon>
+                        <md-icon>bar_chart</md-icon>
                     </md-button>
 
                     <md-button class="md-icon-button" title="Dokumenter" ui-sref="shared-documents">
