--- a/app/src/header/header.view.html
+++ b/app/src/header/header.view.html
@@ -11,6 +11,7 @@
 
                     <md-button class="md-icon-button" title="FlowChart" ui-sref="flowchart">
                         <md-icon>bar_chart</md-icon>
+                        <md-tooltip md-delay="500" md-direction="bottom">FlowChart</md-tooltip>
                     </md-button>
 
                     <md-button class="md-icon-button" title="Dokumenter" ui-sref="shared-documents">
